--- a/pymc_analysis_discrimination.ipynb
+++ b/pymc_analysis_discrimination.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
+      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext rpy2.ipython\n"
      ]
     }
    ],
@@ -30,79 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Need help getting started? Try the cookbook for R:\n",
-      "http://www.cookbook-r.com/Graphs/\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:reshape’:\n",
-      "\n",
-      "    rename\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘gridExtra’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    combine\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: Matrix\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘Matrix’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:reshape’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘lme4’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.5/dist-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    sigma\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%R\n",
     "\n",
@@ -150,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,18 +131,18 @@
     "p.2 <- ggplot(data=data_resp_avs, aes(x=within_x_density_diff, y=Dots_Counted)) +\n",
     "        binomial_smooth()\n",
     "\n",
-    "r.1 <- glm(data=data_resp_avs, Dots_Counted ~ within_x_diff, family=binomial(link=\"probit\"))\n",
-    "r.2 <- glm(data=data_resp_avs, Dots_Counted ~ within_x_density_diff, family=binomial(link=\"probit\"))\n",
-    "r.3 <- glm(data=data_resp_avs, Dots_Counted ~ within_x_diff * within_x_density_diff, family=binomial(link=\"probit\"))\n",
+    "#r.1 <- glm(data=data_resp_avs, Dots_Counted ~ within_x_diff, family=binomial(link=\"probit\"))\n",
+    "#r.2 <- glm(data=data_resp_avs, Dots_Counted ~ within_x_density_diff, family=binomial(link=\"probit\"))\n",
+    "#r.3 <- glm(data=data_resp_avs, Dots_Counted ~ within_x_diff * within_x_density_diff, family=binomial(link=\"probit\"))\n",
     "\n",
-    "summary(r.3)\n",
+    "#summary(r.3)\n",
     "#summary(lm(data_resp_avs$within_x2_tot ~ data_resp_avs$Dots_Shown2))\n",
     "#print(summary(lm(data_resp_avs$pctArea2 ~ data_resp_avs$Time2)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,9 +151,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "/usr/local/lib/python3.5/dist-packages/pymc3/model.py:384: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  if not np.issubdtype(var.dtype, float):\n",
+      "ERROR (theano.gof.opt): Optimization failure due to: local_grad_log_erfc_neg\n",
+      "ERROR (theano.gof.opt): node: Elemwise{true_div,no_inplace}(Elemwise{mul,no_inplace}.0, Elemwise{erfc,no_inplace}.0)\n",
+      "ERROR (theano.gof.opt): TRACEBACK:\n",
+      "ERROR (theano.gof.opt): Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/theano/gof/opt.py\", line 2019, in process_node\n",
+      "    replacements = lopt.transform(node)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/theano/tensor/opt.py\", line 6780, in local_grad_log_erfc_neg\n",
+      "    if not exp.owner.inputs[0].owner:\n",
+      "AttributeError: 'NoneType' object has no attribute 'owner'\n",
+      "\n",
+      "Multiprocess sampling (2 chains in 2 jobs)\n",
+      "NUTS: [b_unseen_subj, b_seen_subj, sd_unseen_grp_log__, sd_seen_grp_log__, b_unseen_grp, b_seen_grp]\n",
+      "100%|██████████| 1200/1200 [01:54<00:00, 10.52it/s]\n",
+      "There were 10 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "The acceptance probability does not match the target. It is 0.9532187998572735, but should be close to 0.8. Try to increase the number of tuning steps.\n",
+      "There were 786 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "The acceptance probability does not match the target. It is 0.1868252741582055, but should be close to 0.8. Try to increase the number of tuning steps.\n",
+      "The gelman-rubin statistic is larger than 1.05 for some parameters. This indicates slight problems during sampling.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          mean        sd  mc_error   hpd_2.5   hpd_97.5  \\\n",
+      "b_seen_grp           12.337404  3.143137  0.302642  8.575994  20.554626   \n",
+      "b_unseen_grp         12.115692  3.043060  0.292896  8.741013  20.324366   \n",
+      "b_seen_subj__0_0     12.673784  3.125268  0.295466  7.896310  20.597952   \n",
+      "b_seen_subj__1_0     12.314016  3.276748  0.311174  8.640126  21.067776   \n",
+      "b_seen_subj__2_0     12.421128  3.105889  0.294103  8.563627  20.865180   \n",
+      "b_seen_subj__3_0     12.272151  3.248988  0.309293  8.397608  20.674653   \n",
+      "b_seen_subj__4_0     12.424647  3.220559  0.306202  8.395644  20.900666   \n",
+      "b_seen_subj__5_0     12.402411  3.158320  0.299262  8.533430  21.034415   \n",
+      "b_seen_subj__6_0     12.422711  3.167480  0.300487  8.248165  20.592726   \n",
+      "b_seen_subj__7_0     12.232530  3.247824  0.307981  8.451671  21.056340   \n",
+      "b_seen_subj__8_0     12.219183  3.238654  0.307320  8.692938  21.374427   \n",
+      "b_seen_subj__9_0     12.378606  3.168356  0.300414  8.029452  20.553333   \n",
+      "b_seen_subj__10_0    12.297808  3.218131  0.305921  7.954697  20.571837   \n",
+      "b_seen_subj__11_0    12.158265  3.331986  0.316838  8.101885  20.494792   \n",
+      "b_seen_subj__12_0    12.533273  3.118457  0.295568  7.907764  20.389049   \n",
+      "b_seen_subj__13_0    12.544111  3.244161  0.308850  8.404375  20.976029   \n",
+      "b_seen_subj__14_0    12.248505  3.228774  0.306275  8.618114  20.967066   \n",
+      "b_seen_subj__15_0    12.112839  3.331195  0.317773  8.550759  21.304541   \n",
+      "b_seen_subj__16_0    12.336234  3.204638  0.304718  8.668246  21.039196   \n",
+      "b_seen_subj__17_0    12.349098  3.234334  0.305643  8.103904  20.689439   \n",
+      "b_seen_subj__18_0    12.302819  3.265991  0.309778  8.315108  21.181789   \n",
+      "b_seen_subj__19_0    12.106666  3.319127  0.316152  7.993337  20.297794   \n",
+      "b_unseen_subj__0_0   12.138018  3.122890  0.297531  8.064789  20.073803   \n",
+      "b_unseen_subj__1_0   12.126328  3.071688  0.293007  8.656903  20.537481   \n",
+      "b_unseen_subj__2_0   12.148098  3.056469  0.289968  8.479662  20.062381   \n",
+      "b_unseen_subj__3_0   12.132076  3.106451  0.295010  8.523261  20.741743   \n",
+      "b_unseen_subj__4_0   12.116662  3.105559  0.294930  8.111447  20.222787   \n",
+      "b_unseen_subj__5_0   12.124707  3.115016  0.296212  8.244957  20.363479   \n",
+      "b_unseen_subj__6_0   12.112224  3.137196  0.299036  8.326624  20.573777   \n",
+      "b_unseen_subj__7_0   12.137354  3.081807  0.292754  7.869802  19.998182   \n",
+      "b_unseen_subj__8_0   12.117623  3.091199  0.294200  8.253462  20.273208   \n",
+      "b_unseen_subj__9_0   12.094380  3.106051  0.295617  8.706918  20.778725   \n",
+      "b_unseen_subj__10_0  12.074069  3.111868  0.295371  8.414256  20.615757   \n",
+      "b_unseen_subj__11_0  12.143398  3.059397  0.290165  8.286880  20.279345   \n",
+      "b_unseen_subj__12_0  12.136247  3.102554  0.293744  8.024157  20.083410   \n",
+      "b_unseen_subj__13_0  12.024986  3.060899  0.290737  8.578846  20.402740   \n",
+      "b_unseen_subj__14_0  12.105969  3.114706  0.295579  8.669893  20.897188   \n",
+      "b_unseen_subj__15_0  12.097605  3.097571  0.294751  8.527886  20.565780   \n",
+      "b_unseen_subj__16_0  12.110821  3.085353  0.292908  7.995778  20.054002   \n",
+      "b_unseen_subj__17_0  12.138349  3.085842  0.293344  8.397867  20.334262   \n",
+      "b_unseen_subj__18_0  12.083010  3.112108  0.294840  8.381389  20.474007   \n",
+      "b_unseen_subj__19_0  12.093444  3.105234  0.295458  8.296186  20.447714   \n",
+      "sd_seen_grp           0.666156  0.406030  0.033548  0.045565   1.437158   \n",
+      "sd_unseen_grp         0.469294  0.362573  0.030520  0.102865   1.185157   \n",
+      "\n",
+      "                     n_eff      Rhat  \n",
+      "b_seen_grp            18.0  1.061795  \n",
+      "b_unseen_grp          18.0  1.056110  \n",
+      "b_seen_subj__0_0      21.0  1.020623  \n",
+      "b_seen_subj__1_0      18.0  1.059923  \n",
+      "b_seen_subj__2_0      20.0  1.039303  \n",
+      "b_seen_subj__3_0      18.0  1.070003  \n",
+      "b_seen_subj__4_0      19.0  1.045274  \n",
+      "b_seen_subj__5_0      19.0  1.054979  \n",
+      "b_seen_subj__6_0      19.0  1.045287  \n",
+      "b_seen_subj__7_0      17.0  1.073363  \n",
+      "b_seen_subj__8_0      17.0  1.073178  \n",
+      "b_seen_subj__9_0      19.0  1.052913  \n",
+      "b_seen_subj__10_0     18.0  1.060536  \n",
+      "b_seen_subj__11_0     17.0  1.082115  \n",
+      "b_seen_subj__12_0     20.0  1.030902  \n",
+      "b_seen_subj__13_0     18.0  1.050185  \n",
+      "b_seen_subj__14_0     18.0  1.069849  \n",
+      "b_seen_subj__15_0     16.0  1.096779  \n",
+      "b_seen_subj__16_0     18.0  1.059874  \n",
+      "b_seen_subj__17_0     18.0  1.059941  \n",
+      "b_seen_subj__18_0     18.0  1.066989  \n",
+      "b_seen_subj__19_0      6.0  1.096638  \n",
+      "b_unseen_subj__0_0    18.0  1.055306  \n",
+      "b_unseen_subj__1_0    18.0  1.055821  \n",
+      "b_unseen_subj__2_0    18.0  1.053147  \n",
+      "b_unseen_subj__3_0    18.0  1.053888  \n",
+      "b_unseen_subj__4_0    18.0  1.055308  \n",
+      "b_unseen_subj__5_0    18.0  1.054694  \n",
+      "b_unseen_subj__6_0    18.0  1.055333  \n",
+      "b_unseen_subj__7_0    18.0  1.056967  \n",
+      "b_unseen_subj__8_0    18.0  1.050911  \n",
+      "b_unseen_subj__9_0    18.0  1.055629  \n",
+      "b_unseen_subj__10_0   18.0  1.059882  \n",
+      "b_unseen_subj__11_0   18.0  1.048521  \n",
+      "b_unseen_subj__12_0   19.0  1.048623  \n",
+      "b_unseen_subj__13_0   18.0  1.050465  \n",
+      "b_unseen_subj__14_0   18.0  1.058178  \n",
+      "b_unseen_subj__15_0   18.0  1.061328  \n",
+      "b_unseen_subj__16_0   18.0  1.050757  \n",
+      "b_unseen_subj__17_0   18.0  1.049308  \n",
+      "b_unseen_subj__18_0   18.0  1.058590  \n",
+      "b_unseen_subj__19_0   18.0  1.056378  \n",
+      "sd_seen_grp           24.0  1.023655  \n",
+      "sd_unseen_grp          6.0  1.131063  \n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def remove_n(ls,n):\n",
@@ -335,9 +392,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(summary)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
