--- a/analysis_discrimination.Rmd
+++ b/analysis_discrimination.Rmd
@@ -248,7 +248,7 @@ data.resp.avs.subs <- data.resp.avs.subs %>%
             mutate(dens_norm2 = within_x2/pctArea2) %>%
             mutate(dens_norm = log(dens_norm1) - log(dens_norm2)) %>% 
             mutate(dens_norm_err =dens_norm * (1 * (dens_norm1 < dens_norm2) * (Dots_Shown1 > Dots_Shown2) + 1 * (dens_norm1 > dens_norm2)  * (Dots_Shown1 < Dots_Shown2))) %>% 
-
+            mutate(dens_norm_err =dens_norm * (1 * (dens_norm1 < dens_norm2) * (Dots_Shown1 > Dots_Shown2) + 1 * (dens_norm1 > dens_norm2)  * (Dots_Shown1 < Dots_Shown2))) %>% 
             mutate(acc_err = (within_x1 - within_x2) *  (1 * (within_x1 < within_x2) * (Dots_Shown1 > Dots_Shown2) + 1 *  (within_x1 > within_x2) * (Dots_Shown1 < Dots_Shown2) )) %>% 
             #mutate(dens_norm_abs_err = abs(dens_norm_err)) %>% 
             mutate(acc_err_bin  =  1 * (within_x1 < within_x2) * (Dots_Shown1 > Dots_Shown2) - 1 *  (within_x1 > within_x2) * (Dots_Shown1 < Dots_Shown2)) %>% 
@@ -340,33 +340,61 @@ ggplot(data=data.resp.avs.subs) +
         theme_light() +
         paper_theme_3
 
+
+ggplot(data=data.resp.avs.subs) + 
+            stat_summary(aes(x=factor(dens_norm_err_bin), y=Dots_Counted), 
+                           geom="bar", size=1., alpha=0.5)  +
+          stat_summary(aes(x=factor(dens_norm_err_bin), y=Dots_Counted), 
+                           geom="point", size=2.)  +
+          stat_summary(aes(x=factor(dens_norm_err_bin), y=Dots_Counted), 
+                         geom="errorbar", width=0.25, size=1.)  +
+      scale_x_discrete(labels=c("See 2 > 1, falsely", "Correctly estimate", "See 1 > 2, falsely")) +
+        xlab("") + ylab("P(Choose 2)")  +
+        #facet_wrap(~cond) #+
+        theme_light() +
+        paper_theme_3
+
 data.resp.avs.subs$cond_ord <- factor(data.resp.avs.subs$cond, levels(factor(data.resp.avs.subs$cond))[c(3,2,1,4)])
 
 
 ggplot(data=data.resp.avs.subs, aes(x=cond_ord, y=Dots_Counted)) +
-          stat_summary(fun.y="mean", geom="point", alpha=0.75, size=4.) +
-          stat_summary(fun.data="mean_se", geom="errorbar", width=0.25) +
+            geom_hline(yintercept=0.5, alpha=0.5) +
+      stat_summary(geom="point", fun.y="mean",position=position_dodge(width=0.2), size=1., alpha=0.8, aes(group=Subject, color="Participant", shape="Participant"))+ 
+  
+        stat_summary(geom="errorbar", width=0.2,size=1.0, fun.data="mean_se", aes(color="Group")) +
+      stat_summary(geom="point", fun.y="mean", size=3., alpha=0.9, aes(color="Group", shape="Group")) +
+         # theme(legend.title=element_blank(), legend.text=element_blank()) +
+
+        scale_color_manual(name="a", values=c("Red", "Black"),labels=c("Group", "Participant")) +
+        scale_shape_manual(name="a", values=c(19, 17), labels=c("Group", "Participant")) +
         theme_light() + 
         paper_theme_3 + 
-            theme(legend.title=element_blank(), legend.text=element_blank()) +
+        theme(legend.text=element_text(size=10), legend.title=element_blank(), axis.text.x=element_text(size=12), axis.title.y=element_text(size=14), axis.text.y=element_text(size=12)) +
 
             xlab("")  + ylab("p(choose 2)")
 
-ggsave("figs/dots_counted_diff.pdf", width=6,height=5)
+ggsave("figs/dots_counted_diff.png", width=6,height=5, dpi=500)
 
 ggplot(data=data.resp.avs.subs, aes(x=cond_ord, y=within_x_log_diff)) +
           #geom_violin(adjust=1.5) +
-            stat_summary(fun.y="mean", geom="line", alpha=0.75, size=1., linetype="dashed", aes(group=1)) +
-          stat_summary(fun.y="mean", geom="point", alpha=0.75, size=4.) +
-          stat_summary(fun.data="mean_se", geom="errorbar", width=0.25) +
-        theme_light() + 
-        paper_theme_3 + 
-          guides(color=FALSE) +
+          #  stat_summary(fun.y="mean", geom="line", alpha=0.75, size=1., linetype="dashed", aes(group=1)) + 
+
+          geom_hline(yintercept=0,alpha=0.5) +
+      stat_summary(geom="point", fun.y="mean",position=position_dodge(width=0.2), size=1., alpha=0.8, aes(group=Subject, color="Participant", shape="Participant"))+ 
+  
+        stat_summary(geom="errorbar", width=0.2,size=1.0, fun.data="mean_se", aes(color="Group")) +
+      stat_summary(geom="point", fun.y="mean", size=3., alpha=0.9, aes(color="Group", shape="Group")) +
          # theme(legend.title=element_blank(), legend.text=element_blank()) +
 
-            xlab("")  + ylab("Difference in dots seen (2 vs. 1)")
+        scale_color_manual(name="a", values=c("Red", "Black"),labels=c("Group", "Participant")) +
+        scale_shape_manual(name="a", values=c(19, 17), labels=c("Group", "Participant")) +
+        theme_light() + 
+        paper_theme_3 + 
+        theme(legend.text=element_text(size=10), legend.title=element_blank(), axis.text.x=element_text(size=12), axis.title.y=element_text(size=14), axis.text.y=element_text(size=12)) +
 
-ggsave("figs/dots_seen_diff.pdf", width=6,height=5)
+            xlab("")  + ylab(expression(F[2] - F[1]))
+
+ggsave("figs/dots_seen_diff.png", width=6,height=5, dpi=500)
 
 
 levels(factor(data.resp.avs.subs$cond_ord))
@@ -374,18 +402,12 @@ levels(factor(data.resp.avs.subs$cond_ord))
 data.resp.avs.subs$cond_ord <- factor(data.resp.avs.subs$cond, levels(factor(data.resp.avs.subs$cond))[c(2,1,3,4)])
 
 
-
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ cond_ord, family=binomial(link="probit")))
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ Dots_Ratio, family=binomial(link="probit")))
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ cond_ord + Dots_Ratio, family=binomial(link="probit")))
-
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ Time1 + Time2 + Dots_Ratio, family=binomial(link="probit")))
-
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ Time1 + Time2 + Dots_Ratio + within_x_log_diff, family=binomial(link="probit")))
-
-
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ within_x_log_diff + Dots_Ratio, family=binomial(link="probit")))
-
 summary(glm(data=data.resp.avs.subs, Dots_Counted ~ within_x_log_diff + Time1 + Time2 + Dots_Ratio, family=binomial(link="probit")))
 
 
