--- a/analysis_estimation.Rmd
+++ b/analysis_estimation.Rmd
@@ -376,12 +376,14 @@ data.resp <- data.resp %>%
 
 ggplot(data=data.resp, aes(x=Time, y=pct_err)) +
      # geom_violin(color="blue", alpha=0.75) +
-      #stat_summary(geom="bar", alpha=0.8, fun.y="mean") +
+      stat_summary(geom="line", alpha=0.5,size=0.25,
+                   fun.y="mean", 
+                   position=position_dodge(width=0.2),
+                   aes(group=pid,
+                    color="Participant")) +
       stat_summary(geom="point", fun.y="mean",position=position_dodge(width=0.2), size=1., alpha=0.8, aes(group=Subject, color="Participant", shape="Participant"))+ 
-     # stat_summary(geom="line", fun.y="median",position=position_dodge(width=0.2), size=.25, alpha=0.5, aes(group=Subject),linetype="dotted")+ 
-        #geom_jitter(width=0.1,height=0.05, size=0.5,alpha=0.25) + 
         scale_y_continuous(labels = scales::percent) +
-        stat_summary(geom="errorbar", width=0.2,size=1.0, fun.data="mean_se") +
+        stat_summary(geom="errorbar", width=0.4,size=1.0,aes(color="Group"), fun.data="mean_se") +
       stat_summary(geom="point", fun.y="mean", size=3., alpha=0.9, aes(color="Group", shape="Group")) +
        # coord_cartesian(ylim=c(-.6,.6)) +
 
@@ -397,22 +399,53 @@ ggplot(data=data.resp, aes(x=Time, y=pct_err)) +
 ggsave("figs/Time_Pct_Err.png", width=5, height=4, dpi=400)
 
 
+data.resp <- data.resp %>%
+          mutate(time_num=(as.numeric(as.character(Time)))) %>%
+          group_by(pid, Subject) %>%
+          mutate(z_score = (err - mean(err))/sd(err)) 
 
-ggplot(data=data.resp, aes(x=Time, y= pct_err - mean_err_subj)) +
+data.resp.bypart <- data.resp %>%
+          group_by(pid, Subject, Time) %>%
+          mutate(pct_err=median(pct_err)) %>%
+          mutate(z_score=mean(z_score)) %>%
+           top_n(n=1, wt=id) %>%
+          group_by(Time) %>%
+          mutate(mean_pct_err=mean(pct_err)) %>%
+          mutate(median_pct_err=median(pct_err)) %>%
+          mutate(sd_err= sd(mean_pct_err)) %>%
+          mutate(time_s = paste(time_num, "s", sep=""))
+
+ggplot(data=data.resp, aes(x=time_num, y=z_score)) +
      # geom_violin(color="blue", alpha=0.75) +
       #stat_summary(geom="bar", alpha=0.8, fun.y="mean") +
-      stat_summary(geom="point", fun.y="median",position=position_dodge(width=0.2), size=1., alpha=0.8, aes(group=Subject, color="Participant"), shape=2)+ 
-        #geom_jitter(width=0.1,height=0.05, size=0.5,alpha=0.25) + 
-        scale_y_continuous(labels = scales::percent) +
-        stat_summary(geom="errorbar", width=0.25,size=1.0, fun.data="mean_se") +
-      stat_summary(geom="point", fun.y="mean", size=3., alpha=0.8, aes(color="Group")) +
-        #coord_cartesian(ylim=c(-.6,.6)) +
+      stat_summary(geom="point", fun.y="mean",position=position_dodge(width=0.2), size=1., alpha=0.8, aes(group=Subject, color="Participant", shape="Participant"))+ 
+       # scale_y_continuous(labels = scales::percent) +
+  scale_x_log10(breaks=c(0.1,0.33,1,3), labels=c("0.1", "0.33", "1", "3")) + 
+        stat_summary(geom="errorbar", width=0.2,size=1.0,alpha=0.9, fun.data="mean_se", aes(color="Group", shape="Group")) +
+      stat_summary(geom="point", fun.y="mean", size=3., alpha=0.9, aes(color="Group", shape="Group")) +
+       # coord_cartesian(ylim=c(-.6,.6)) +
 
         xlab("Time (s)") +
-        ylab("Percent error change from 0.1") +
-        theme_light() + paper_theme_3  + guides(fill=FALSE, color=FALSE)
+        ylab("Z-score of percent error") +
+        theme_light() + paper_theme_3  + 
+        theme(legend.text=element_text(size=10), legend.title=element_blank()) +
+        guides(fill=FALSE) +
+        scale_color_manual(name="a", values=c("Red", "Black"),labels=c("Group", "Participant")) +
+        scale_shape_manual(name="a", values=c(19, 17), labels=c("Group", "Participant")) +
+
+        geom_hline(yintercept=0)
+  
 ggsave("figs/Time_Pct_Err_Subj.png", width=5, height=4, dpi=400)
 
+data.resp.bytime <- data.resp %>%
+                  group_by(pid, Subject, Time) %>%
+                  mutate(pct_err=mean(pct_err)) %>%
+                  group_by(Time) %>%
+                  mutate(sd_err = sd(pct_err))%>%
+                  top_n(n=1, wt=trial_id)
+
+table(data.resp.bytime$Time, data.resp.bytime$sd_err)
+#table(data.resp.bypart$sd_err, data.resp.bypart$Time)
 
 data.resp.old <- cbind(data.resp)
 
@@ -426,121 +459,6 @@ data.resp.old <- cbind(data.resp)
 
 
 
-```{r, eval=FALSE}
-data.resp <- cbind(data.resp.old) %>%
-                group_by(Subject, pid, Time) %>%
-              top_n(n=16, wt=id) 
-
-data.resp.cop <- cbind(data.resp)
-
-
-
-f_get_pred <- function(who) {
-  who <- who[1]
-  subs <- data.resp.cop %>%
-          filter(Subject == who)
-  
-  r.1 <- loess(data=subs, Dots_Counted ~ time_num * Dots_Shown  )
-  pred.1 <- predict(r.1, type="response", interval="prediction")
-
-  return(pred.1)
-
-}
-
-data.resp <- data.resp %>%
-              group_by(Subject) %>%
-              mutate(pred=f_get_pred(Subject)) %>%
-              mutate(dev = abs(Dots_Counted - pred)) %>%
-              filter(dev < 20) 
-
-data.resp.cop <- cbind(data.resp)
-data.resp <- data.resp %>%
-              group_by(Subject) %>%
-              mutate(pred=f_get_pred(Subject))
-
-data.resp.cop <- cbind(data.resp)
-
-f_get_weber <- function(who, t) {
-  who <- who[1]
-  subs <- data.resp.cop %>%
-          filter((Subject == who) & (time_num == t))
-          #filter(Subject == who)
-
-  r.2 <- glm(data=subs, dev ~ Dots_Shown - 1)
-  
-  return(r.2$coefficients["Dots_Shown"])
-
-  
-  
-}
-
-
-f_get_pred_dev <- function(who) {
-  who <- who[1]
-  subs <- data.resp.cop %>%
-          filter(Subject == who)
-  r.2 <- loess(data=subs, dev ~ Dots_Shown * time_num)
-  pred.2 <- predict(r.2, type="response", interval="prediction")
-
-  return(pred.2)
-
-  
-  
-}
-
-
-data.resp <- data.resp %>%
-              group_by(Subject) %>%
-             mutate(pred_dev = f_get_pred_dev(Subject)) %>%
-              group_by(Subject, Time) %>%
-              mutate(weber=f_get_weber(Subject, time_num))
-          
-
-#r.1 <- loess(data=data.resp, Dots_Counted ~ time_num  * Dots_Shown  )
-
-#pred.1 <- predict(r.1, type="response", interval="prediction")
-#data.resp$pred_dots <- pred.1
-#data.resp$dev <- abs(data.resp$Dots_Counted - data.resp$pred_dots)
-#data.resp <- subset(data.resp, data.resp$dev < 25)
-#r.2 <- glm(data=data.resp, dev ~ Dots_Shown * time_num)
-#pred.2 <- predict(r.2, type="response", interval="prediction")
-#data.resp$pred_dev <- pred.2
-
-
-
-
-              
-          
-
-#ggplot(data=data.resp, aes(x=Dots_Shown, y=pred_dots, color=Time)) +
-      #  stat_smooth(se=FALSE) 
-
-#ggplot(data=data.resp.agg, aes(x=Time, y=dev)) +
-    #    stat_summary(fun.data="mean_se") +
-    #  stat_smooth(method="lm", se=TRUE)  
-
-ggplot(data=data.resp, aes(x=dev)) +
-       geom_histogram(bins=40)
-
-ggplot(data=data.resp, aes(x=Dots_Shown, y=pred_dev, color=Time)) +
-     #stat_summary_bin(fun.data="mean_se", bins=3) +
-     stat_smooth(se=FALSE)
-
-ggplot(data=data.resp, aes(x=Time, y=pred_dev))  +
-      stat_summary(fun.data="mean_se") #+
-
-
-data.resp.agg <- data.resp %>%
-          group_by(Time, Subject) %>%
-          top_n(n=1, wt=id)
-
-ggplot(data=data.resp, aes(x=Time, y=weber))  +
-      stat_summary(fun.data="mean_se")  #+
-     # geom_point()
-
-
-
-```
 
 ```{r, fig.width=7.5, fig.height=5, results='asis', message=FALSE, echo=FALSE, warning=FALSE}
 
@@ -554,17 +472,18 @@ ggplot(data=data.resp, aes(x=Time, y=weber))  +
                   #mutate(within_x = (gazeDist < 100)*0.65 + (gazeDist < 250) * 0.2 + 0.05) %>%
                  # mutate(within_x = 1 -  0.5**((belowX+.01)*0.5)) %>%
                   #mutate(within_x = (1-(1/(belowX+1.5))**0.5)) %>%
-                  #mutate(within_x = 0.5*(belowX > 0) + 0.5 * (belowX > 4)) %>%
-                  mutate(within_x = pInGaze**0.8) %>%
+                  #mutate(within_x = 1-exp(-belowX)) %>%
+                  #mutate(within_x =  (belowX > 3)) %>%
+                  #mutate(within_x = pInGaze) %>%
 
                   #mutate(within_x = 2/(1 + exp(-1 -0.25*belowX)) - 1) %>%
-
-                  group_by(trial_id) %>% 
+          
+                  group_by(trial_id, Subject, pid, Time) %>% 
                   mutate(belowX = mean(belowX)) %>%
-                  mutate(within_x = mean(within_x)) %>%
+                 # mutate(within_x = mean(within_x)) %>%
 
                   #mutate(within_x = mean(within_x)) %>%
-                  #mutate(within_x=mean(pInGaze)) %>%
+                  mutate(within_x=mean(pInGaze)) %>%
                   #mutate(within_x = belowX) %>%
 
                   mutate(within_x_tot=sum(within_x)) %>%
@@ -590,40 +509,185 @@ data.resp.avs$time_num <- as.numeric(as.character(data.resp.avs$Time))
 
 ```{r}
 
+data.resp.avs <- data.resp.avs %>%
 
+                  group_by(Dots_Shown) %>%
+                  mutate(cent_err=(Dots_Counted - mean(Dots_Counted))) %>%
+                  mutate(cent_abs_err=abs(cent_err)) %>%
+                  #mutate(cent_abs_err=sd(cent_err)) %>%
+                  mutate(sd_count=cent_abs_err/mean(Dots_Counted)) %>%
+                  # mutate(sd_count=(Dots_Counted - mean(Dots_Counted))) %>%
+
+                  #mutate(sd_count=sd_count) %>%
+                  mutate(pct_dev = sd_count) 
+                  #ungroup %>%
+                  #mutate(pct_dev=sd(pct_dev))
+                  # mutate(pct_dev=(pct_dev-mean(pct_dev))/sd(pct_dev))
 
 
 #r.1 <- lmer(data=data.resp.avs, err ~ time_num + (1+time_num|Subject))
 #r.2 <- lmer(data=data.resp.avs, err ~ time_num + within_x_tot + (1+time_num+within_x_tot|Subject))
 summary(lm(data=data.resp.avs, err ~ seen_shown_diff + Dots_Shown))
 
-r.0 <- lm(data=data.resp.avs, abs_pct_err ~ Dots_Shown)
-r.1 <- lm(data=data.resp.avs, abs_pct_err ~ time_num)
-r.2 <- lm(data=data.resp.avs, abs_pct_err ~ time_num + poly(within_x, 1))
-r.3 <- lm(data=data.resp.avs, abs_pct_err ~ time_num + poly(within_x, 2))
-r.4 <- lm(data=data.resp.avs, abs_pct_err ~ within_x + Dots_Shown)
-r.5 <- lm(data=data.resp.avs, abs_pct_err ~  within_x + time_num + Dots_Shown)
+lm(data=data.resp.avs, pct_err ~ Dots_Shown)
+lm(data=data.resp.avs, pct_err ~ time_num)
+lm(data=data.resp.avs, pct_err ~ time_num + Dots_Shown)
+summary(lmer(data=data.resp.avs, pct_err ~ time_num + (1+time_num|Subject)))
 
-#r.1 <- lm(data=data.resp.avs, Dots_Counted ~ Dots_Shown)
-#r.2 <- lm(data=data.resp.avs, Dots_Counted ~ Dots_Shown + within_x_tot )
+summary(lm(data=data.resp.avs, cent_err ~ time_num + Dots_Shown))
 
-#r.1 <- lm(data=data.resp.avs, pct_err ~ time_num)
-#r.2 <- lm(data=data.resp.avs, pct_err ~ time_num + within_x)
-
-summary(r.0)
-summary(r.1)
-summary(r.2)
-summary(r.3)
-summary(r.4)
-summary(r.5)
-
-anova(r.1,r.2)
+summary(lm(data=data.resp.avs, cent_abs_err ~ time_num + Dots_Shown))
+#summary(lmer(data=data.resp.avs.subj, pct_dev ~ Dots_Shown + time_num + (0+Dots_Shown+time_num|Subject)))
+#summary(lmer(data=data.resp.avs.subj, pct_dev ~ time_num + Dots_Shown + (1+Dots_Shown|Subject)))
 
 
+ggplot(data=data.resp.avs, aes(x=Time, y=pct_dev)) +
+      stat_summary(fun.y="mean", geom="point", aes(group=Subject), alpha=0.5) +
+      stat_summary(color="red") 
+
+
+data.resp.avs.subj <- data.resp.avs %>%
+                      group_by(Dots_Shown, Time) %>%
+                      mutate(pct_dev=sd(Dots_Counted)/mean(Dots_Counted)) %>%
+                      top_n(n=1, wt=id)
+        
+if(FALSE){
+ggplot(data=data.resp.avs.subj, aes(x=Time, y=pct_dev)) +
+     # geom_point() + 
+      stat_summary(alpha=0.5,size=2.5, fun.y="mean", geom="point") +
+      stat_smooth(method="lm", alpha=1, size=1.25, se=FALSE)  +
+        scale_y_continuous(labels = scales::percent)  +
+          ylab("Standard deviation") +
+          theme_light() +  paper_theme_3  +  
+    theme(legend.title=element_text(size=14), legend.text=element_text(size=12), 
+            axis.title.y=element_text(size=16), axis.title.x=element_text(size=16)) +
+        xlab("Number of dots")#+
+      #scale_y_sqrt()
 #stargazer(r.2)
 
-```
+ggplot(data=data.resp.avs.subj, aes(x=Dots_Shown, y=pct_dev, color=Time)) +
+      #geom_point() + 
+      stat_smooth(method="lm", alpha=0.15, se=TRUE)  +
+      xlim(10,80) + #coord_cartesian(ylim=c(0,0.6)) +
+     # stat_summary(alpha=0.5,size=2.5, fun.y="mean", geom="point") +
+      stat_smooth(method="lm", alpha=1, size=1.25, se=FALSE)  +
 
+      stat_summary_bin(bins=25, alpha=0.8,size=2, fun.y="mean", geom="point") +
+        scale_y_continuous(labels = scales::percent)  +
+          ylab("Standard deviation") +
+          theme_light() +  paper_theme_3  +  
+    theme(legend.title=element_text(size=14), legend.text=element_text(size=12), 
+            axis.title.y=element_text(size=16), axis.title.x=element_text(size=16)) +
+        xlab("Number of dots")#+
+      #scale_y_sqrt()
+#stargazer(r.2)
+ggsave("figs/dev_pd.png", width=5, height=4, dpi=300)
+
+ggplot(data=data.resp.avs, aes(x=Dots_Shown, y=pct_err, group=Time, color=Time)) +
+
+      stat_smooth(method="lm", alpha=0.15, se=TRUE)  +
+      xlim(10,78) + 
+     # coord_cartesian(ylim=c(-0.5,0.2)) +
+     # stat_summary(alpha=0.5,size=2.5, fun.y="mean", geom="point") +
+      #stat_summary_bin(bins=60, alpha=0.8,size=2.5, fun.y="mean", geom="point") +
+      stat_summary_bin(bins=25, alpha=0.8,size=2., fun.y="mean", geom="point") +
+
+      stat_smooth(method="lm", alpha=1, size=1.25, se=FALSE)  +
+        scale_y_continuous(labels = scales::percent)  +
+          ylab("Error") +
+          theme_light() +  paper_theme_3  +  
+    theme(legend.title=element_text(size=14), legend.text=element_text(size=12), 
+            axis.title.y=element_text(size=16), axis.title.x=element_text(size=16)) +
+        geom_hline(yintercept=0) +
+        xlab("Number of dots")  
+
+ggsave("figs/err_pd.png", width=5, height=4, dpi=300)
+        #+ scale_color_continuous(low="blue", high="red")
+
+}
+ggplot(data=data.resp.avs, aes(x=Dots_Counted %% 10)) +
+      geom_histogram(binwidth=1, aes(y = ..density..)) +
+          theme_light() + paper_theme_3 +
+        xlab("Guess modulo 10") +       theme(strip.text=element_blank()) +
+      scale_x_continuous(breaks=seq.int(0,9,1)) +
+      ylab("Proportion of guesses") #+
+
+     # facet_wrap(~Subject)
+     # facet_wrap(~I(10 * round(Dots_Shown / 10)))
+
+
+ggplot(aes(x=Dots_Counted %% 5), data=#data.resp.avs)+
+       subset(data.resp.avs, data.resp.avs$Dots_Shown %% 5 != 0)) +
+      geom_histogram(binwidth=1, aes(y = ..density..)) +
+          theme_light() + paper_theme_3 +
+        xlab("Guess modulo 5") +       theme(strip.text=element_blank()) +
+      scale_x_continuous(breaks=seq.int(0,5,1)) +
+      ylab("Proportion of guesses")
+
+
+
+data.resp.avs.subs.3 <- data.resp.avs %>%
+                        ungroup %>%
+                        mutate(dc_mod_5 = Dots_Counted %% 5) %>%
+                        filter(dc_mod_5 != 0) %>%
+                        mutate(tot=n()) %>%
+                        group_by(dc_mod_5) %>%
+                        mutate(mod_5_pct= n()/tot) %>%
+                        mutate(mod_5_dev = mod_5_pct * (1-mod_5_pct)/sqrt(26)) %>%
+                        mutate(mod_5_max = mod_5_pct + mod_5_dev) %>%
+                          mutate(mod_5_min= mod_5_pct - mod_5_dev) %>%
+
+                        top_n(n=1,wt=trial_id)
+
+
+ggplot(aes(x=dc_mod_5, y=mod_5_pct), data=data.resp.avs.subs.3)+
+        geom_bar(alpha=0.7,stat='identity') +
+        geom_point() +
+      geom_errorbar(aes(ymin=mod_5_min, ymax = mod_5_max), width=0.0)+
+          theme_light() + paper_theme_3 +
+        xlab("Guess modulo 5") +      
+    #theme(strip.text=element_blank()) +
+      scale_x_continuous(breaks=seq.int(0,5,1)) +
+      ylab("Proportion of guesses") 
+
+
+ggplot(data.resp.avs, aes(x=within_x, y=pct_err, color=factor(Time))) +
+        geom_point(aes(color=factor(Time)), alpha=0.2, size=2.) +
+        #stat_summary_bin(bins=10, alpha=0.5, fun.y="mean", geom="point", size=3.) 
+         # stat_summary_bin(bins=25,width=0, size=0.25, alpha=0.5, fun.data="mean_se", geom="errorbar") +
+          stat_smooth(method="lm", se=TRUE,formula=y~poly(x,1),  aes(color=factor(Time)), span=5, size=2.25, alpha=0.2) +
+  stat_smooth(method="lm", se=FALSE,formula=y~poly(x,1),  aes(color=factor(Time)), span=5, size=2.25, alpha=0.8) +
+        xlab("Dots within gaze") +
+        ylab("Error") +
+          #xlim(0.01,1) +
+           scale_color_discrete(name="Time") +
+           geom_hline(yintercept=0) +
+        theme_light() + 
+        paper_theme_3 +
+  
+        theme(legend.title=element_text(size=12), legend.text=element_text(size=10),
+              legend.position=c(0.92,0.8), axis.title.x=element_text(face="plain", size=16, color="black"), axis.title.y=element_text(face="plain", size=16,color="black"),
+              axis.text.y=element_text(face="plain", size=14,color="black"),
+                            axis.text.x=element_text(face="plain", size=14,color="black")) +
+
+          scale_y_continuous(labels = scales::percent, limits=c(-0.65,0.65)) +  #, breaks=c(-0.4,-0.3,-0.09,0,0.4)) +
+    #geom_segment(angle=0, inherit.aes = FALSE, aes(x=0.1, y=-0.09, xend=0.99, yend=-0.09)) +
+  # geom_segment(angle=0, inherit.aes = FALSE, aes(x=0.1, y=-0.3, xend=0.99, yend=-0.3)) +
+    #geom_abline()
+    #scale_x_log10(limits=c(0.1,1))
+     scale_x_continuous(labels = scales::percent, limits=c(0.1,1))
+ 
+
+ggsave("figs/err_time_seen.png", width=5,height=4,dpi=400)
+ggsave("figs/err_time_seen.pdf", width=5,height=4,dpi=400)
+
+
+
+
+
+
+```
+ 
 ```{r, fig.width=7.5, fig.height=5, results='asis', message=FALSE, echo=FALSE, warning=FALSE}
 
 p.0 <- ggplot(data=data.resp.avs, aes(x=factor(Time), y=pct_err)) +
@@ -926,19 +990,20 @@ p.5.3.2
 ggsave("figs/seen_by_abs_error.png", width=5, height=5,dpi=400)
 
 p.5.3.3 <- ggplot(data=data.resp.avs, aes(x=Time, y=within_x)) +
-          stat_summary(aes(group=Subject, color="Participant", shape="Participant"),alpha=0.7, position=position_jitter(width=0.04,height=0.05), fun.y="median", geom="point") +
+          stat_summary(aes(group=Subject, color="Participant", shape="Participant"),alpha=0.7, position=position_dodge(width=0.2), fun.y="median", geom="point") +
+            stat_summary(aes(group=Subject, color="Participant", shape="Participant"),alpha=0.7, position=position_dodge(width=0.2), fun.y="median", geom="line") +
           #geom_violin(fill="blue", alpha=0.25, adjust=1.25) + #, draw_quantiles = c(0.25, 0.5, 0.75)) +
           stat_summary(fun.y="mean", geom="point", size=4., alpha=0.85, aes(color="Group", shape="Group")) +
-          stat_summary(fun.data="mean_cl_boot", geom="errorbar", width=0.3, size=1) +
+          stat_summary(fun.data="mean_cl_boot", geom="errorbar", width=0.5, size=1, aes(color="Group")) +
           scale_y_continuous(labels = scales::percent)  +
         scale_color_manual(name="a", values=c("Red", "Black"),labels=c("Group", "Participant")) +
         scale_shape_manual(name="a", values=c(19, 17), labels=c("Group", "Participant")) +
           ylab("Dots foveated") +
-          theme_light() +  paper_theme_3  +  theme(legend.title=element_blank(), legend.text=element_text(size=12))
+          theme_light() +  paper_theme_3  +  theme(legend.title=element_blank(), legend.text=element_text(size=12), legend.position=c(0.2, 0.85))
 
 p.5.3.3
 
-ggsave("figs/Time_by_seen.png", width=5, height=4,dpi=400)
+ggsave("figs/Time_by_seen.png", width=5, height=5,dpi=400)
 
 
 
